// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots of the full Diagnostic > 'admin_simples_sem_finding' 1`] = `
{
  "findings": [],
  "meta": {
    "configHash": "4c2da7fd",
    "dataHash": "a7ae67e2",
    "localeId": "pt-BR",
    "lucidVersion": "0.1.0",
    "standardVersion": "ABNT NBR ISO 24495-1:2024",
  },
  "metrics": {
    "cohesion": {
      "adjacentGapRatio": 1,
      "connectivesByClass": {
        "additive": 0,
        "adversative": 0,
        "causal": 0,
        "conclusive": 0,
        "temporal": 0,
      },
      "connectivesPer100Words": 0,
      "referentialOverlap": 0,
    },
    "readability": 85.8,
    "sentences": 3,
    "syllables": 28,
    "syllablesPerWord": 1.9,
    "words": 15,
    "wordsPerSentence": 5,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passiva_sintetica",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalization",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalizacao_encadeada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "jargon",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "sigla_sem_expansao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mais_que_perfeito_sintetico",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "gerundismo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbio_mente_denso",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbios_vagos",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "redundancia",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "perifrase_inflada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mesoclise",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "dupla_negacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "subordinacao_densa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "leitor_terceira_pessoa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "salto_de_nivel_titulo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "vocabulario_da_organizacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 0,
  },
  "text": "A prefeitura abriu as inscrições. O prazo termina em maio. Os documentos vão no site.",
}
`;

exports[`snapshots of the full Diagnostic > 'frase_longa' 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "long_sentence",
      "justification": "Frase com 29 palavras. O Lucid inspeciona frases com mais de 20 palavras; esse número é um parâmetro do produto, não um limite da norma, que pede frases concisas sem fixar tamanho. Verifique se a frase carrega mais de uma ideia: se carregar, separe as ideias; se carregar uma só, ela pode ficar como está.",
      "meta": {
        "threshold": 20,
        "words": 29,
      },
      "normativeReference": {
        "section": "5.3.4",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 215,
        "start": 0,
        "text": "A comissão responsável pela avaliação das propostas técnicas apresentadas pelos participantes do certame decidiu, após longa deliberação interna, prorrogar o prazo final de entrega dos documentos exigidos no edital.",
      },
    },
    {
      "category": "syntactic",
      "criterion": "nominalizacao_encadeada",
      "justification": "Frase com 3 substantivos de ação (nominalizações): o acúmulo pesa a leitura. Escolha quais ações voltam a ser verbos.",
      "meta": {
        "count": 3,
        "kind": "density",
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "info",
      "source": "iso-24495-1",
      "span": {
        "end": 37,
        "start": 28,
        "text": "avaliação",
      },
    },
    {
      "category": "syntactic",
      "criterion": "nominalizacao_encadeada",
      "justification": "Frase com 3 substantivos de ação (nominalizações): o acúmulo pesa a leitura. Escolha quais ações voltam a ser verbos.",
      "meta": {
        "count": 3,
        "kind": "density",
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "info",
      "source": "iso-24495-1",
      "span": {
        "end": 136,
        "start": 125,
        "text": "deliberação",
      },
    },
    {
      "category": "syntactic",
      "criterion": "nominalizacao_encadeada",
      "justification": "Nominalização seguida de complemento abstrato ligado por “de”: a ação principal está escondida num substantivo. Em geral dá para reescrever com o verbo, mas isso muda a estrutura da frase; avalie se a versão com o verbo fica mais clara.",
      "meta": {
        "kind": "chain",
        "links": 1,
        "strongLink": false,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "info",
      "source": "iso-24495-1",
      "span": {
        "end": 195,
        "start": 173,
        "text": "entrega dos documentos",
      },
    },
  ],
  "meta": {
    "configHash": "4c2da7fd",
    "dataHash": "a7ae67e2",
    "localeId": "pt-BR",
    "lucidVersion": "0.1.0",
    "standardVersion": "ABNT NBR ISO 24495-1:2024",
  },
  "metrics": {
    "cohesion": {
      "adjacentGapRatio": 0,
      "connectivesByClass": {
        "additive": 0,
        "adversative": 0,
        "causal": 0,
        "conclusive": 0,
        "temporal": 0,
      },
      "connectivesPer100Words": 0,
      "referentialOverlap": 0,
    },
    "readability": -5.2,
    "sentences": 1,
    "syllables": 77,
    "syllablesPerWord": 2.7,
    "words": 29,
    "wordsPerSentence": 29,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 3.4,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passiva_sintetica",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalization",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 3,
          "warning": 0,
        },
        "criterion": "nominalizacao_encadeada",
        "densityPer100Words": 10.3,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "jargon",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "sigla_sem_expansao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mais_que_perfeito_sintetico",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "gerundismo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbio_mente_denso",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbios_vagos",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "redundancia",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "perifrase_inflada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mesoclise",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "dupla_negacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "subordinacao_densa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "leitor_terceira_pessoa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "salto_de_nivel_titulo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "vocabulario_da_organizacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 4,
  },
  "text": "A comissão responsável pela avaliação das propostas técnicas apresentadas pelos participantes do certame decidiu, após longa deliberação interna, prorrogar o prazo final de entrega dos documentos exigidos no edital.",
}
`;

exports[`snapshots of the full Diagnostic > 'juridico_com_jargao' 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "passive_voice",
      "justification": "Voz passiva sem agente: o Lucid não encontrou na frase quem praticou a ação. Se ela não diz, informe quem a praticou para que a versão final possa nomear esse agente.",
      "meta": {
        "eventiveness": "eventive_tense",
        "hasAgent": false,
        "participleEnd": 20,
        "participleStart": 14,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 20,
        "start": 10,
        "text": "foi negado",
      },
    },
    {
      "category": "lexical",
      "criterion": "jargon",
      "justification": "Termo jurídico que pode não ser familiar a leitores de fora dessa área. O Lucid não registra equivalente para ele. Indica fase ou instância de um processo (“em sede de recurso”); a forma que caberia depende do procedimento de que se fala. Escolha a forma que diga o que você quer nesta frase.",
      "meta": {
        "domain": "legal",
        "kind": "phrase",
        "term": "em sede de",
      },
      "normativeReference": {
        "section": "5.3.2",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 31,
        "start": 21,
        "text": "em sede de",
      },
      "suggestion": undefined,
    },
    {
      "category": "lexical",
      "criterion": "jargon",
      "justification": "Termo jurídico que pode não ser familiar a leitores de fora dessa área. O glossário do Lucid registra “citado acima” como equivalente; confira se ele mantém o sentido nesta frase antes de usá-lo.",
      "meta": {
        "domain": "legal",
        "kind": "word",
        "term": "supracitado",
      },
      "normativeReference": {
        "section": "5.3.2",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 65,
        "start": 54,
        "text": "supracitado",
      },
      "suggestion": "citado acima",
    },
  ],
  "meta": {
    "configHash": "4c2da7fd",
    "dataHash": "a7ae67e2",
    "localeId": "pt-BR",
    "lucidVersion": "0.1.0",
    "standardVersion": "ABNT NBR ISO 24495-1:2024",
  },
  "metrics": {
    "cohesion": {
      "adjacentGapRatio": 1,
      "connectivesByClass": {
        "additive": 0,
        "adversative": 0,
        "causal": 0,
        "conclusive": 0,
        "temporal": 0,
      },
      "connectivesPer100Words": 0,
      "referentialOverlap": 0,
    },
    "readability": 54.4,
    "sentences": 2,
    "syllables": 31,
    "syllablesPerWord": 2.2,
    "words": 14,
    "wordsPerSentence": 7,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 7.1,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passiva_sintetica",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalization",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalizacao_encadeada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 2,
        },
        "criterion": "jargon",
        "densityPer100Words": 14.3,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "sigla_sem_expansao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mais_que_perfeito_sintetico",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "gerundismo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbio_mente_denso",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbios_vagos",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "redundancia",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "perifrase_inflada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mesoclise",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "dupla_negacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "subordinacao_densa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "leitor_terceira_pessoa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "salto_de_nivel_titulo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "vocabulario_da_organizacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 3,
  },
  "text": "O recurso foi negado em sede de apelação. O documento supracitado consta nos autos.",
}
`;

exports[`snapshots of the full Diagnostic > 'nominalizacao_mapeamento_unico' 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "nominalization",
      "justification": "Nominalização com verbo-suporte: a ação está escondida num substantivo, e o verbo que corresponde a ele é um só: “analisar”. Reescreva com esse verbo, conjugado, e ajuste o complemento. O Lucid não reescreve a frase: ele verifica a sua versão ou a proposta da IA.",
      "meta": {
        "baseVerb": "analisar",
        "lightVerb": "fazer",
        "nominalization": "análise",
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 25,
        "start": 10,
        "text": "fazer a análise",
      },
    },
    {
      "category": "syntactic",
      "criterion": "nominalizacao_encadeada",
      "justification": "Nominalização seguida de complemento abstrato ligado por “de”: a ação principal está escondida num substantivo. Em geral dá para reescrever com o verbo, mas isso muda a estrutura da frase; avalie se a versão com o verbo fica mais clara.",
      "meta": {
        "kind": "chain",
        "links": 1,
        "strongLink": false,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "info",
      "source": "iso-24495-1",
      "span": {
        "end": 39,
        "start": 18,
        "text": "análise de documentos",
      },
    },
    {
      "category": "syntactic",
      "criterion": "nominalization",
      "justification": "Nominalização com verbo-suporte: a ação está escondida num substantivo, e o verbo que corresponde a ele é um só: “pagar”. Reescreva com esse verbo, conjugado, e ajuste o complemento. O Lucid não reescreve a frase: ele verifica a sua versão ou a proposta da IA.",
      "meta": {
        "baseVerb": "pagar",
        "lightVerb": "realizar",
        "nominalization": "pagamento",
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 75,
        "start": 55,
        "text": "realizar o pagamento",
      },
    },
  ],
  "meta": {
    "configHash": "4c2da7fd",
    "dataHash": "a7ae67e2",
    "localeId": "pt-BR",
    "lucidVersion": "0.1.0",
    "standardVersion": "ABNT NBR ISO 24495-1:2024",
  },
  "metrics": {
    "cohesion": {
      "adjacentGapRatio": 1,
      "connectivesByClass": {
        "additive": 1,
        "adversative": 0,
        "causal": 0,
        "conclusive": 0,
        "temporal": 0,
      },
      "connectivesPer100Words": 7.1,
      "referentialOverlap": 0,
    },
    "readability": 48.4,
    "sentences": 2,
    "syllables": 32,
    "syllablesPerWord": 2.3,
    "words": 14,
    "wordsPerSentence": 7,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passiva_sintetica",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 2,
        },
        "criterion": "nominalization",
        "densityPer100Words": 14.3,
      },
      {
        "count": {
          "error": 0,
          "info": 1,
          "warning": 0,
        },
        "criterion": "nominalizacao_encadeada",
        "densityPer100Words": 7.1,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "jargon",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "sigla_sem_expansao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mais_que_perfeito_sintetico",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "gerundismo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbio_mente_denso",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbios_vagos",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "redundancia",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "perifrase_inflada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mesoclise",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "dupla_negacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "subordinacao_densa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "leitor_terceira_pessoa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "salto_de_nivel_titulo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "vocabulario_da_organizacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 3,
  },
  "text": "É preciso fazer a análise de documentos. Também convém realizar o pagamento da taxa.",
}
`;

exports[`snapshots of the full Diagnostic > 'quatro_criterios_span_sobreposto' 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "long_sentence",
      "justification": "Frase com 29 palavras. O Lucid inspeciona frases com mais de 20 palavras; esse número é um parâmetro do produto, não um limite da norma, que pede frases concisas sem fixar tamanho. Verifique se a frase carrega mais de uma ideia: se carregar, separe as ideias; se carregar uma só, ela pode ficar como está.",
      "meta": {
        "threshold": 20,
        "words": 29,
      },
      "normativeReference": {
        "section": "5.3.4",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 208,
        "start": 0,
        "text": "O pedido foi analisado pela comissão, que decidiu fazer a verificação dos documentos supracitados antes de conceder, em sede de procedimento administrativo, o benefício pleiteado pelo interessado no processo.",
      },
    },
    {
      "category": "syntactic",
      "criterion": "passive_voice",
      "justification": "Voz passiva com agente explícito: a frase diz quem praticou a ação, mas só depois do verbo. Considere a voz ativa, com esse agente como sujeito, para o leitor saber logo quem faz o quê.",
      "meta": {
        "agentEnd": 36,
        "agentMarkerEnd": 27,
        "agentMarkerStart": 23,
        "agentTruncated": false,
        "eventiveness": "agent",
        "hasAgent": true,
        "participleEnd": 22,
        "participleStart": 13,
        "subjectStart": 0,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 36,
        "start": 9,
        "text": "foi analisado pela comissão",
      },
    },
    {
      "category": "syntactic",
      "criterion": "nominalization",
      "justification": "Nominalização com verbo-suporte: a ação está escondida num substantivo, e o verbo que corresponde a ele é um só: “verificar”. Reescreva com esse verbo, conjugado, e ajuste o complemento. O Lucid não reescreve a frase: ele verifica a sua versão ou a proposta da IA.",
      "meta": {
        "baseVerb": "verificar",
        "lightVerb": "fazer",
        "nominalization": "verificação",
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 69,
        "start": 50,
        "text": "fazer a verificação",
      },
    },
    {
      "category": "syntactic",
      "criterion": "nominalizacao_encadeada",
      "justification": "Nominalização seguida de complemento abstrato ligado por “de”: a ação principal está escondida num substantivo. Em geral dá para reescrever com o verbo, mas isso muda a estrutura da frase; avalie se a versão com o verbo fica mais clara.",
      "meta": {
        "kind": "chain",
        "links": 1,
        "strongLink": false,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "info",
      "source": "iso-24495-1",
      "span": {
        "end": 84,
        "start": 58,
        "text": "verificação dos documentos",
      },
    },
    {
      "category": "lexical",
      "criterion": "jargon",
      "justification": "Termo jurídico que pode não ser familiar a leitores de fora dessa área. O glossário do Lucid registra “citados acima” como equivalente; confira se ele mantém o sentido nesta frase antes de usá-lo.",
      "meta": {
        "domain": "legal",
        "kind": "word",
        "term": "supracitados",
      },
      "normativeReference": {
        "section": "5.3.2",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 97,
        "start": 85,
        "text": "supracitados",
      },
      "suggestion": "citados acima",
    },
    {
      "category": "lexical",
      "criterion": "jargon",
      "justification": "Termo jurídico que pode não ser familiar a leitores de fora dessa área. O Lucid não registra equivalente para ele. Indica fase ou instância de um processo (“em sede de recurso”); a forma que caberia depende do procedimento de que se fala. Escolha a forma que diga o que você quer nesta frase.",
      "meta": {
        "domain": "legal",
        "kind": "phrase",
        "term": "em sede de",
      },
      "normativeReference": {
        "section": "5.3.2",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 127,
        "start": 117,
        "text": "em sede de",
      },
      "suggestion": undefined,
    },
  ],
  "meta": {
    "configHash": "4c2da7fd",
    "dataHash": "a7ae67e2",
    "localeId": "pt-BR",
    "lucidVersion": "0.1.0",
    "standardVersion": "ABNT NBR ISO 24495-1:2024",
  },
  "metrics": {
    "cohesion": {
      "adjacentGapRatio": 0,
      "connectivesByClass": {
        "additive": 0,
        "adversative": 0,
        "causal": 0,
        "conclusive": 0,
        "temporal": 1,
      },
      "connectivesPer100Words": 3.4,
      "referentialOverlap": 0,
    },
    "readability": -8.1,
    "sentences": 1,
    "syllables": 78,
    "syllablesPerWord": 2.7,
    "words": 29,
    "wordsPerSentence": 29,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 3.4,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 3.4,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passiva_sintetica",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "nominalization",
        "densityPer100Words": 3.4,
      },
      {
        "count": {
          "error": 0,
          "info": 1,
          "warning": 0,
        },
        "criterion": "nominalizacao_encadeada",
        "densityPer100Words": 3.4,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 2,
        },
        "criterion": "jargon",
        "densityPer100Words": 6.9,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "sigla_sem_expansao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mais_que_perfeito_sintetico",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "gerundismo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbio_mente_denso",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbios_vagos",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "redundancia",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "perifrase_inflada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mesoclise",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "dupla_negacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "subordinacao_densa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "leitor_terceira_pessoa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "salto_de_nivel_titulo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "vocabulario_da_organizacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 6,
  },
  "text": "O pedido foi analisado pela comissão, que decidiu fazer a verificação dos documentos supracitados antes de conceder, em sede de procedimento administrativo, o benefício pleiteado pelo interessado no processo.",
}
`;

exports[`snapshots of the full Diagnostic > 'termos_protegidos_por_guardas' 1`] = `
{
  "findings": [
    {
      "category": "lexical",
      "criterion": "jargon",
      "justification": "Termo jurídico que pode não ser familiar a leitores de fora dessa área. O glossário do Lucid registra “além disso” como equivalente; confira se ele mantém o sentido nesta frase antes de usá-lo.",
      "meta": {
        "domain": "legal",
        "kind": "word",
        "term": "outrossim",
      },
      "normativeReference": {
        "section": "5.3.2",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 55,
        "start": 46,
        "text": "Outrossim",
      },
      "suggestion": "além disso",
    },
  ],
  "meta": {
    "configHash": "4c2da7fd",
    "dataHash": "a7ae67e2",
    "localeId": "pt-BR",
    "lucidVersion": "0.1.0",
    "standardVersion": "ABNT NBR ISO 24495-1:2024",
  },
  "metrics": {
    "cohesion": {
      "adjacentGapRatio": 1,
      "connectivesByClass": {
        "additive": 1,
        "adversative": 0,
        "causal": 0,
        "conclusive": 0,
        "temporal": 0,
      },
      "connectivesPer100Words": 6.3,
      "referentialOverlap": 0,
    },
    "readability": 68.9,
    "sentences": 3,
    "syllables": 33,
    "syllablesPerWord": 2.1,
    "words": 16,
    "wordsPerSentence": 5.3,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passiva_sintetica",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalization",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalizacao_encadeada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "jargon",
        "densityPer100Words": 6.3,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "sigla_sem_expansao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mais_que_perfeito_sintetico",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "gerundismo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbio_mente_denso",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbios_vagos",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "redundancia",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "perifrase_inflada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mesoclise",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "dupla_negacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "subordinacao_densa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "leitor_terceira_pessoa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "salto_de_nivel_titulo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "vocabulario_da_organizacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 1,
  },
  "text": "O termo "supracitado" aparece. Ele disse que, Outrossim, viria. A empresa tem sede em São Paulo.",
}
`;

exports[`snapshots of the full Diagnostic > 'texto_vazio' 1`] = `
{
  "findings": [],
  "meta": {
    "configHash": "4c2da7fd",
    "dataHash": "a7ae67e2",
    "localeId": "pt-BR",
    "lucidVersion": "0.1.0",
    "standardVersion": "ABNT NBR ISO 24495-1:2024",
  },
  "metrics": {
    "cohesion": {
      "adjacentGapRatio": 0,
      "connectivesByClass": {
        "additive": 0,
        "adversative": 0,
        "causal": 0,
        "conclusive": 0,
        "temporal": 0,
      },
      "connectivesPer100Words": 0,
      "referentialOverlap": 0,
    },
    "readability": null,
    "sentences": 0,
    "syllables": 0,
    "syllablesPerWord": 0,
    "words": 0,
    "wordsPerSentence": 0,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passiva_sintetica",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalization",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalizacao_encadeada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "jargon",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "sigla_sem_expansao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mais_que_perfeito_sintetico",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "gerundismo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbio_mente_denso",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbios_vagos",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "redundancia",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "perifrase_inflada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mesoclise",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "dupla_negacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "subordinacao_densa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "leitor_terceira_pessoa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "salto_de_nivel_titulo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "vocabulario_da_organizacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 0,
  },
  "text": "",
}
`;

exports[`snapshots of the full Diagnostic > 'unicode_aspas_travessao' 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "passive_voice",
      "justification": "Voz passiva sem agente: o Lucid não encontrou na frase quem praticou a ação. Se ela não diz, informe quem a praticou para que a versão final possa nomear esse agente.",
      "meta": {
        "eventiveness": "eventive_tense",
        "hasAgent": false,
        "participleEnd": 23,
        "participleStart": 14,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 23,
        "start": 10,
        "text": "foi publicada",
      },
    },
  ],
  "meta": {
    "configHash": "4c2da7fd",
    "dataHash": "a7ae67e2",
    "localeId": "pt-BR",
    "lucidVersion": "0.1.0",
    "standardVersion": "ABNT NBR ISO 24495-1:2024",
  },
  "metrics": {
    "cohesion": {
      "adjacentGapRatio": 0,
      "connectivesByClass": {
        "additive": 0,
        "adversative": 0,
        "causal": 0,
        "conclusive": 0,
        "temporal": 0,
      },
      "connectivesPer100Words": 0,
      "referentialOverlap": 0,
    },
    "readability": 53.3,
    "sentences": 1,
    "syllables": 30,
    "syllablesPerWord": 2.1,
    "words": 14,
    "wordsPerSentence": 14,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 1,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 7.1,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passiva_sintetica",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalization",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalizacao_encadeada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "jargon",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "sigla_sem_expansao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mais_que_perfeito_sintetico",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "gerundismo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbio_mente_denso",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbios_vagos",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "redundancia",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "perifrase_inflada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mesoclise",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "dupla_negacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "subordinacao_densa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "leitor_terceira_pessoa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "salto_de_nivel_titulo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "vocabulario_da_organizacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 1,
  },
  "text": "A decisão foi publicada — “sem prejuízo de” eventual recurso — conforme o §2º do artigo.",
}
`;

exports[`snapshots of the full Diagnostic > 'voz_passiva_com_e_sem_agente' 1`] = `
{
  "findings": [
    {
      "category": "syntactic",
      "criterion": "passive_voice",
      "justification": "Voz passiva com agente explícito: a frase diz quem praticou a ação, mas só depois do verbo. Considere a voz ativa, com esse agente como sujeito, para o leitor saber logo quem faz o quê.",
      "meta": {
        "agentEnd": 38,
        "agentMarkerEnd": 29,
        "agentMarkerStart": 25,
        "agentTruncated": false,
        "eventiveness": "agent",
        "hasAgent": true,
        "participleEnd": 24,
        "participleStart": 16,
        "subjectStart": 0,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": false,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 38,
        "start": 12,
        "text": "foi assinado pelo diretor.",
      },
    },
    {
      "category": "syntactic",
      "criterion": "passive_voice",
      "justification": "Voz passiva sem agente: o Lucid não encontrou na frase quem praticou a ação. Se ela não diz, informe quem a praticou para que a versão final possa nomear esse agente.",
      "meta": {
        "eventiveness": "eventive_tense",
        "hasAgent": false,
        "participleEnd": 64,
        "participleStart": 55,
      },
      "normativeReference": {
        "section": "5.3.3",
        "standard": "ABNT NBR ISO 24495-1",
      },
      "principleGroup": "understandable",
      "requiresHuman": true,
      "severity": "warning",
      "source": "iso-24495-1",
      "span": {
        "end": 64,
        "start": 49,
        "text": "foram aprovadas",
      },
    },
  ],
  "meta": {
    "configHash": "4c2da7fd",
    "dataHash": "a7ae67e2",
    "localeId": "pt-BR",
    "lucidVersion": "0.1.0",
    "standardVersion": "ABNT NBR ISO 24495-1:2024",
  },
  "metrics": {
    "cohesion": {
      "adjacentGapRatio": 1,
      "connectivesByClass": {
        "additive": 0,
        "adversative": 0,
        "causal": 0,
        "conclusive": 0,
        "temporal": 0,
      },
      "connectivesPer100Words": 0,
      "referentialOverlap": 0,
    },
    "readability": 40.7,
    "sentences": 2,
    "syllables": 24,
    "syllablesPerWord": 2.4,
    "words": 10,
    "wordsPerSentence": 5,
  },
  "score": {
    "byCriterion": [
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_sentence",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 2,
        },
        "criterion": "passive_voice",
        "densityPer100Words": 20,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "passiva_sintetica",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalization",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "nominalizacao_encadeada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "jargon",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "sigla_sem_expansao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mais_que_perfeito_sintetico",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "gerundismo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbio_mente_denso",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "adverbios_vagos",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "redundancia",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "perifrase_inflada",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "paragraph_length",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "prose_enumeration",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "mesoclise",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "dupla_negacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "subordinacao_densa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "leitor_terceira_pessoa",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "salto_de_nivel_titulo",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "long_heading",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "vocabulario_da_organizacao",
        "densityPer100Words": 0,
      },
      {
        "count": {
          "error": 0,
          "info": 0,
          "warning": 0,
        },
        "criterion": "single_item_list",
        "densityPer100Words": 0,
      },
    ],
    "totalFindings": 2,
  },
  "text": "O relatório foi assinado pelo diretor. As contas foram aprovadas.",
}
`;
